# qaradar

./: .gitignore  .mcp.json  CHANGELOG.md  README.md  pyproject.toml  server.json
.claude/: settings.local.json
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  release.yml
commands/: qa-check.md  qa-plan.md  qa-pr-risk.md  qa-risky.md  qa-untested.md
qaradar/: __init__.py  cli.py  config.py  engine.py  git.py  models.py  server.py
qaradar/analyzers/: __init__.py  churn.py  coverage.py  risk.py  test_mapping.py
tests/: conftest.py  test_churn.py  test_cli.py  test_config.py  test_coverage.py  test_engine.py  test_git.py  test_pr_risk.py  test_risk.py  test_server.py  test_test_mapping.py
tests/fixtures/go_app/: cover.out  math_test.go
tests/fixtures/python_app/: coverage.json
tests/fixtures/python_app/src/: untested.py
tests/fixtures/python_app/tests/: test_calculator.py
tests/fixtures/ts_app/: coverage.lcov
tests/fixtures/ts_app/__tests__/: utils.test.ts
tests/fixtures/ts_app/src/: untested.ts  utils.ts
