[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qaradar"
version = "0.3.1"
description = "QA Radar — give your AI coding agent the quality brain it doesn't have to grow from scratch."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Murat", email = "me@murat-kus.com" }
]
keywords = ["qa", "testing", "mcp", "quality-engineering", "test-governance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pydantic>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov", "ruff", "mypy"]

[project.scripts]
qaradar = "qaradar.cli:main"

[project.urls]
Homepage = "https://github.com/Muratkus/qaradar"
Repository = "https://github.com/Muratkus/qaradar"
Changelog = "https://github.com/Muratkus/qaradar/blob/main/CHANGELOG.md"
Issues = "https://github.com/Muratkus/qaradar/issues"

[tool.pytest.ini_options]
norecursedirs = ["tests/fixtures", ".worktrees", "dist", "build"]
python_classes = ["Test*Suite", "Test*Case"]
